--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 *.xcuserstate
-Example/XTPageView.xcworkspace/xcuserdata/
-Example/archives/
+Example/XTPageView.xcworkspace/xcuserdata/*
+Example/archives/*
